# teams-transcript-muncher

./: README.md  build_exe.ps1  devtools_snippet.js  pyproject.toml
src/teams_transcript/: __main__.py  cli.py  extractor.py  formatter.py  gui.py  selectors.py
src/teams_transcript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
